# rust_sandbox

./: Cargo.toml  rust_start.sh  rust_stop.sh
docker/: .env  docker-compose.yml
docker/rust/: Cargo.toml  Dockerfile
src/: arrays.rs  conditionals.rs  main.rs  print.rs  strings.rs  tuples.rs  types.rs  vars.rs  vectores.rs
